--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "nodemon": "^1.17.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec \"npm test\""
+ 
   },
   "repository": {
     "type": "git",
