--- a/package.json
+++ b/package.json
@@ -8,19 +8,23 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
-    "mongoose": "^5.0.11",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "lodash": "^4.17.5",
+    "mongodb": "^3.0.4",
+    "mongoose": "^5.0.11"
   },
   "devDependencies": {
-    "nodemon": "^1.17.2"
+    "expect": "^1.20.2",
+    "mocha": "^5.0.4",
+    "nodemon": "^1.17.2",
+    "supertest": "^3.0.0"
   },
   "scripts": {
-    "test": "mocha server/**/*.test.js",
+    "test": "mocha server/**/*.test.js --timeout 15000",
     "test-watch": "nodemon --exec \"npm test\"",
     "start": "node server/server.js"
- 
   },
-  "engines":{
+  "engines": {
     "node": "8.9.4"
   },
   "repository": {
