--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "supertest": "^3.0.0"
   },
   "scripts": {
-    "test": "mocha server/**/*.test.js --timeout 15000",
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js --timeout 15000",
     "test-watch": "nodemon --exec \"npm test\"",
     "start": "node server/server.js"
   },
