--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.17.5",
     "mongodb": "^3.0.4",
-    "mongoose": "^5.0.11"
+    "mongoose": "^5.0.11",
+    "validator": "^9.4.1"
   },
   "devDependencies": {
     "expect": "^1.20.2",
